--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="link.css">
 </head>
 <body>
-
-  <header class="header">
+  <header class="header">  
     <div class="header-top">
         <a href="#" class="logo">
             <img src="monash logo.png" alt="Monash University Logo">
@@ -30,9 +29,11 @@
 </header>
 
 <nav class="navbar">
+  <div class="logo nav">
+  <img src="monash logo.png" alt="Monash University Logo"></div>
     <ul class="nav-list">
       <li class="dropdown">
-        <a href="#">About </a>
+       <a href="#">About </a>
         <ul class="dropdown-menu">
             <li><a href="#">Who we are</a></li>
             <li><a href="#">Structure</a></li>
@@ -83,12 +84,17 @@
         </li>
     </ul>
 </nav>
-
-
-
-<section id="section a" class="section a">
-  <img src="front page.JPG" alt="front page">
+<section class="hero">
+  <div class="hero-content">
+      <h1>CHOOSE MONASH</h1>
+      <h2>IN 2025</h2>
+      <br>
+      <h5>Accept your offer-></h5>
+      <br>
+      <a href="#search" class="cta-button">Search</a>
+  </div>
 </section>
+
 <section class="features-section">
   <div class="features-grid">
     <div class="feature-card">
@@ -151,13 +157,6 @@
       <h3>Business Administration</h3>
       <p>
         Ranked #3 in the world and #1 in Australia, Shanghai Ranking Global Ranking of Academic Subjects 2024.
-      </p>
-    </div>
-    <div class="ranking-card">
-      <div class="icon">📈</div>
-      <h2>35th in the world</h2>
-      <p>
-        We rank 35th in the US News and World Report 2024-25 Best Global Universities Rankings.
       </p>
     </div>
   </div>
